# connect-four-python

./: .gitignore  README.md  pyproject.toml  test_requirements.txt
connect_four/: board.py  main.py  player.py  player_auto.py  player_manual.py  player_random.py  validate.py
tests/: conftest.py  test_board.py  test_player.py  test_player_auto.py  test_player_manual.py  test_player_random.py  test_validate.py
